[gd_scene load_steps=2 format=3 uid="uid://bks2ih1fawf8t"]

[ext_resource type="Script" path="res://scripts/wave_spawner/wave_spawner.gd" id="1_la8ci"]

[node name="WaveSpawner" type="Node2D"]
script = ExtResource("1_la8ci")

[node name="WaveActiveTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BetweemEnemiesTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BetweenWaveGroupsTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="WaveActiveTimer" to="." method="_on_wave_active_timer_timeout"]
[connection signal="timeout" from="BetweemEnemiesTimer" to="." method="_on_spawn_enemy_timeout"]
[connection signal="timeout" from="BetweenWaveGroupsTimer" to="." method="_on_start_next_wave_group_timeout"]
